--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
     <div class="container">
       <header id="main-header">
         <div class="row no-gutters">
-          <div class="col-lg-4 col-md-5">
-            <img src="img/jmatt.png" alt="" />
+          <div class="col-lg-4 col-md-5 col-sm-3">
+            <img src="img/headshot2.jpeg" alt="" />
           </div>
           <div class="col-lg-8 col-md-7">
             <div class="d-flex flex-column">
@@ -38,7 +38,7 @@
                   class="d-flex flex-row justify-content-between align-items-center"
                 >
                   <h1 class="display-4">Jerald Saenz</h1>
-                  <div class="d-none d-md-block">
+                  <div>
                     <a href="http://www.linkedin.com/in/jms93
                     " class="text-white" target="_blank">
                       <i class="fab fa-linkedin fa-2x"></i>
