--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <img src="img/headshot.png" alt="photo of Jerald" />
           </div> -->
           <div class="col-lg-12">
-            <div class="d-flex flex-column">
-              <div class="p-5 bg-dark text-white">
+            <div class="d-flex flex-column bg-blue" >
+              <div class="p-5 bg-blue text-white">
                 <div
                   class="d-flex flex-row justify-content-between align-items-center"
                 >
@@ -65,16 +65,15 @@
                   class="d-flex flex-row text-white align-items-stretch text-center"
                 >
                   <div
-                    class="port-item p-4 bg-light"
+                    class="port-item p-4 bg-blue"
                     data-toggle="collapse"
                     data-target="#home"
-                    style="color: #000;"
                   >
                     <i class="fas fa-home fa-2x d-block"></i>
                     <span class="d-none d-sm-block">Home</span>
                   </div>
                   <div
-                    class="port-item p-4 bg-dark"
+                    class="port-item p-4 bg-light-blue"
                     data-toggle="collapse"
                     data-target="#resume"
                   >
@@ -82,16 +81,15 @@
                     <span class="d-none d-sm-block">Resume</span>
                   </div>
                   <div
-                    class="port-item p-4 bg-light"
+                    class="port-item p-4 bg-blue"
                     data-toggle="collapse"
                     data-target="#work"
-                    style="color: #000;"
                   >
                     <i class="fas fa-folder-open fa-2x d-block"></i>
                     <span class="d-none d-sm-block">Portfolio</span>
                   </div>
                   <div
-                    class="port-item p-4 bg-dark"
+                    class="port-item p-4 bg-light-blue"
                     data-toggle="collapse"
                     data-target="#education"
                   >
@@ -107,7 +105,7 @@
 
       <!-- HOME -->
       <div id="home" class="collapse show">
-        <div class="card card-body bg-secondary text-white py-5">
+        <div class="card card-body bg-blue text-white py-5">
           <h2>Welcome</h2>
           <p class="lead">
             I discovered programming by chance. I volunteered to make a
@@ -126,49 +124,49 @@
           <hr />
           <h4>HTML 5 <i class="fab fa-html5"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:100%">100%</div>
+            <div class="progress-bar bg-secondary" style="width:100%">100%</div>
           </div>
           <h4>CSS 3 <i class="fab fa-css3-alt"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:100%">100%</div>
+            <div class="progress-bar bg-secondary" style="width:100%">100%</div>
           </div>
           <h4>JavaScript <i class="fab fa-js-square"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:90%">90%</div>
+            <div class="progress-bar bg-secondary" style="width:90%">90%</div>
           </div>
           <h4>Ruby & Rails <i class="far fa-gem"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:90%">90%</div>
+            <div class="progress-bar bg-secondary" style="width:90%">90%</div>
           </div>
           <h4>React <i class="fab fa-react"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:60%">60%</div>
+            <div class="progress-bar bg-secondary" style="width:60%">60%</div>
           </div>
           <h4>Angular <i class="fab fa-angular"></i></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:60%">60%</div>
+            <div class="progress-bar bg-secondary" style="width:20%">20%</div>
           </div>
           <h4>SQL <i class="fas fa-server"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:60%">60%</div>
+            <div class="progress-bar bg-secondary" style="width:60%">60%</div>
           </div>
           <h4>PHP<i class="fab fa-php"></i></h4>
           <div class="progress mb-3">
-            <div class="progress-bar bg-success" style="width:60%">60%</div>
+            <div class="progress-bar bg-secondary" style="width:60%">60%</div>
           </div>
         </div>
       </div>
 
       <!-- RESUME -->
       <div id="resume" class="collapse">
-        <div class="card card-body bg-secondary text-white py-5">
+        <div class="card card-body bg-light-blue text-white py-5">
           <h2>My Resume</h2>
           <p class="lead">
             This reflects my salvo into programming.
           </p>
         </div>
 
-        <div class="card card-body py-5">
+        <div class="card card-body  bg-light-blue py-5">
           <div class="card-deck">
             <div class="card">
               <a href="https://tanookidev.group"><img class="card-img-top" src="img/tanooki.png" alt="www.tanookidev.group"></a>
@@ -228,14 +226,14 @@
 
       <!-- WORK -->
       <div id="work" class="collapse">
-        <div class="card card-body bg-secondary text-white py-5">
+        <div class="card card-body bg-blue text-white py-5">
           <h2>My Work</h2>
           <p class="lead">
             Here are some examples of work I have done.  
           </p>
         </div>
 
-        <div class="card card-body py-5">
+        <div class="card card-body  bg-blue py-5">
             <div class="card-group">
               <div class="card">
                 <img class="card-img-top" src="img/gruenedragon.jpg" alt="www.greunedragon.com">
@@ -265,11 +263,11 @@
 
       <!-- Education -->
       <div id="education" class="collapse">
-        <div class="card card-body bg-secondary text-white py-5">
+        <div class="card card-body bg-light-blue text-white py-5">
           <h2>My Education</h2>
         </div>
 
-        <div class="card card-body py-5">
+        <div class="card card-body py-5 bg-light-blue">
           <div class="card-deck">
             <div class="card">
               <img class="card-img-top" src="img/veritas.png" alt="www.harvard.edu">
@@ -325,7 +323,7 @@
       </div>
 
       <!-- FOOTER -->
-      <footer id="main-footer" class="p-5 bg-dark text-white">
+      <footer id="main-footer" class="p-5 bg-blue text-white">
         <div class="row">
           <div class="col-md-6">
             <a href="files/Resume.pdf" class="btn btn-outline-light">
