changing portfolio tab, fixing gruene dragon link

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                   Full Stack Developer
                 </p>
                 <p class="p-2 mb-3 bg-dark text-white">
-                  Design and build websites for our clients.
+                  Creating websites for clients utilizing the following. Front-End:  HTML, CSS, JavaScript, jQuery, React. Back-End: Ruby On Rails, mySQL, MERN
                 </p>
               </div>
               <div class="card-footer">
@@ -238,23 +238,23 @@
               <div class="card">
                 <img class="card-img-top" src="img/gruenedragon.jpg" alt="www.greunedragon.com">
                 <div class="card-body">
-                  <h5 class="card-title"> <a href="http://www.greunedragon.com">Gruene Dragon</a> </h5>
-                  <p class="card-text">A responsive front-end website using bootstrap.</p>
+                  <h5 class="card-title"> <a href="http://www.gruenedragon.com" target="_blank">Gruene Dragon</a> </h5>
+                  <p class="card-text">A responsive front-end website using CSS.</p>
                   
                 </div>
               </div>
               <div class="card">
-                <img class="card-img-top" src="img/tanooki.jpg" alt="www.tanookidev.group">
+                <img class="card-img-top" src="img/tanooki.jpg" alt="www.jerald.site">
                 <div class="card-body">
-                  <h5 class="card-title"><a href="https://www.tanookidev.group">Tanooki Dev</a></h5>
-                  <p class="card-text">A Ruby On Rails site.</p>
+                  <h5 class="card-title">Jerald.site</h5>
+                  <p class="card-text">This site which is a web responsive front-end built with Bootstrap 4.</p>
                 </div>
               </div>
               <div class="card">
                 <img class="card-img-top" src="img/dcodery.jpg" alt="www.dcodery.com">
                 <div class="card-body">
-                  <h5 class="card-title"><a href="https://www.dcodery.com">dCodery</a></h5>
-                  <p class="card-text">A blog for those learning to code.</p>
+                  <h5 class="card-title"><a href="https://js-github-finder1234.netlify.com" target="_blank">Github Finder</a></h5>
+                  <p class="card-text">A React app using context, axios and  deployed to netlify</p>
                 </div>
               </div>
             </div>
