--- a/index.html
+++ b/index.html
@@ -220,8 +220,7 @@
               <div class="card">
                 <img class="card-img-top" src="img/udacity.png" alt="www.udacity.com">
                 <div class="card-body">
-                  <h4 class="card-title">
-                    <a href="files/udacity.pdf" style="text-decoration: none;" target="_blank"> Udacity </a> </h4>
+                  <h4 class="card-title">Udacity</h4>
                   <p class="p-2 mb-3 bg-dark text-white">
                     Grow With Google Scholarship - mobile web
                   </p>
@@ -238,7 +237,7 @@
       <footer id="main-footer" class="p-5 bg-blue text-white">
         <div class="row">
           <div class="col-md-6">
-            <a href="files/Resume.pdf" class="btn btn-outline-light">
+            <a href="files/resume_2021.pdf" class="btn btn-outline-light">
               <i class="fas fa-cloud"></i> Download Resume
             </a>
           </div>
@@ -261,17 +260,4 @@
       integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
       crossorigin="anonymous"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
-
-    <script>
-      $('.port-item').click(function() {
-        $('.collapse').collapse('hide');
-      });
-
-      $(document).on('click', '[data-toggle="lightbox"]', function(e) {
-        e.preventDefault();
-        $(this).ekkoLightbox();
-      });
-    </script>
-  </body>
 </html>
